# exaplot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  config.h.in  winbuild.ps1
app/: AppMain.cpp  AppMain.hpp  AppUI.cpp  AppUI.hpp  CMakeLists.txt  appinterface.cpp  appinterface.hpp  appmain.cpp  appmain.hpp  appui.cpp  appui.hpp  datamanager.cpp  datamanager.hpp  main.cpp  resources.qrc
app/qbuttongrid/: CMakeLists.txt  README.md  qbuttongrid.cpp  qbuttongrid.hpp  qbuttongridplugin.cpp  qbuttongridplugin.hpp  qbuttongridprivate.hpp
app/qbuttongrid/tests/: CMakeLists.txt  test.cpp
app/qcustomplot/: qcustomplot.cpp  qcustomplot.h
app/qplot/: CMakeLists.txt  plot.cpp  plot.hpp  plot2d.cpp  plot2d.hpp  plotcolormap.cpp  plotcolormap.hpp  qplot.cpp  qplot.hpp  qplotplugin.cpp  qplotplugin.hpp
app/qplot/tests/: CMakeLists.txt  test.cpp
app/qplottab/: CMakeLists.txt  qplottab.cpp  qplottab.hpp  qplottabplugin.cpp  qplottabplugin.hpp  qplottabprivate.cpp  qplottabprivate.hpp
app/qplottab/tests/: CMakeLists.txt  test.cpp
app/res/: .gitignore  attributions.txt  gen-icons.sh
app/tests/: CMakeLists.txt  test.cpp
app/ui/: About.cpp  About.hpp  About.ui  MainWindow.cpp  MainWindow.hpp  about.cpp  about.hpp  about.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  ploteditor.cpp  ploteditor.hpp  ploteditor.ui  prerun.cpp  prerun.hpp  prerun.ui
docs/: API.md  ARCHITECTURE.md  sample-config.toml
examples/: colormap-evolve.py  colormap.py  simple-array-plot.py  simple-benchmark.py  simple-plot-data.py  simple-plot.py  simple.py  spectrogram.py
include/: dataconfig.hpp  exaplot.hpp  external.hpp  internal.hpp  orbital.hpp  plotproperty.hpp  zetaplot.hpp
packaging/python/: README.md  pyproject.toml
packaging/windows/: .gitignore  AppComponents.wxs  Folders.wxs  Package.en-us.wxl  Package.wxs  package.ps1
python/: exaplot.py  exaplot.pyi  orbital.py  orbital.pyi  pyproject.toml  zetaplot.py
python/src/: orbital.py  orbital.pyi
source/: core.cpp  module.cpp  script.cpp
tests/: CMakeLists.txt  test-basic.cpp  test-comprehensive.cpp  test-config.h.in  test-invalid.cpp  test-script.cpp  test.cpp  test.hpp
tests/scripts/: test-basic-init.py
tests/scripts/baseline/: global-variable.py  isolated-interp-0.py  isolated-interp-1.py  reload.py  reload2-1.py
tests/scripts/baseline/error/: interrupt.py  load-error-msg.py
tests/scripts/basic/: test-basic-clear.py  test-basic-datafile.py  test-basic-init.py  test-basic-msg.py  test-basic-plot.py  test-basic-plotVec.py
tests/scripts/comprehensive/: test-comprehensive-init.py  test-comprehensive-msg.py  test-comprehensive-plot.py
tests/scripts/init/: args.py  basic.py
tests/scripts/invalid/: test-invalid-datafile.py  test-invalid-init.py  test-invalid-msg.py  test-invalid-plot.py
tests/scripts/run/: args.py
tests/scripts/stop/: invalid.py  post.py  pre.py  stop.py
