[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "exaplot"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = [
    "version",
]

[project.urls]
Repository = "https://github.com/bytemarx/exaplot"

[tool.setuptools_scm]
root = "../.."
